// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Topbar -  renders 1`] = `
<header
  className="topbar "
>
  

  <a
    className="topbar-logo"
    href="#"
    onClick={[Function]}
  />
  

</header>
`;

exports[`Component: Topbar -  renders a static topbar if prop fixed is true 1`] = `
<header
  className="topbar topbar-fixed"
>
  

  <a
    className="topbar-logo"
    href="#"
    onClick={[Function]}
  />
  

</header>
`;

exports[`Component: Topbar -  renders with a button right and a logo 1`] = `
<header
  className="topbar "
>
  

  <a
    className="topbar-logo"
    href="#"
    onClick={[Function]}
  />
  

  <TopbarBtn
    icon="exit_to_app"
    text="Log out"
  />
  

</header>
`;

exports[`Component: Topbar -  renders with nav and button left when prop topbarContent is provided 1`] = `
<header
  className="topbar "
>
  

  <TopbarBtn
    icon="menu"
    target="topbar-nav"
    text="Menu"
  />
  

  <TopbarMenu
    menu={
      Object {
        "btn": Object {
          "icon": "menu",
          "text": "Menu",
        },
        "id": "topbar-nav",
        "items": Array [
          "Link 1",
          "Link 2",
          "Link 3",
        ],
      }
    }
  />
  

  <a
    className="topbar-logo"
    href="#"
    onClick={[Function]}
  />
  

</header>
`;
